--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,30 @@ asttokens==3.0.0
 astunparse==1.6.3
 attrs==25.3.0
 beautifulsoup4==4.13.4
+blis==1.3.0
+catalogue==2.0.10
 certifi==2025.7.9
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cloudpathlib==0.21.1
 colorama==0.4.6
 comm==0.2.2
+confection==0.1.5
 contourpy==1.3.2
 cycler==0.12.1
+cymem==2.0.11
 debugpy==1.8.14
 decorator==5.2.1
+en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 executing==2.2.0
+Faker==37.5.3
 fastapi==0.116.1
+filelock==3.18.0
 flatbuffers==25.2.10
 fonttools==4.58.5
+fsspec==2025.7.0
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.73.1
@@ -31,12 +41,15 @@ ipykernel==6.29.5
 ipython==9.4.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
-keras==3.10.0
 kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
 libclang==18.1.1
+marisa-trie==1.3.0
 Markdown==3.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -44,9 +57,12 @@ matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml_dtypes==0.5.1
+mpmath==1.3.0
+murmurhash==1.0.13
 namex==0.1.0
 nest-asyncio==1.6.0
-numpy==2.1.3
+networkx==3.5
+numpy==2.3.3
 opt_einsum==3.4.0
 optree==0.16.0
 outcome==1.3.0.post0
@@ -55,6 +71,7 @@ pandas==2.3.0
 parso==0.8.4
 pillow==11.3.0
 platformdirs==4.3.8
+preshed==3.0.10
 prompt_toolkit==3.0.51
 protobuf==5.29.5
 psutil==7.0.0
@@ -69,37 +86,51 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 pywin32==310
 pyzmq==27.0.0
+qrcode==8.2
+regex==2025.7.34
 requests==2.32.4
 rich==14.0.0
+scapy==2.6.1
 scikit-learn==1.6.1
 scipy==1.16.0
 seaborn==0.13.2
 selenium==4.34.2
 setuptools==80.9.0
+shellingham==1.5.4
 six==1.17.0
 sklearn-compat==0.1.3
+smart_open==7.3.0.post1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
 stack-data==0.6.3
 starlette==0.47.1
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
+sympy==1.14.0
+ta==0.11.0
 termcolor==3.1.0
+thinc==8.3.6
 threadpoolctl==3.6.0
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
 tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
 trio==0.30.0
 trio-websocket==0.12.2
+typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
+undetected-chromedriver==3.5.5
 urllib3==2.5.0
 uvicorn==0.35.0
+wasabi==1.1.3
 wcwidth==0.2.13
-websocket-client==1.8.0
-Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==1.17.2
-wsproto==1.2.0
+seaborn==0.13.2
+streamlit==1.49.1
+
